dev: uggh. conflicting npm packages

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "name": "node-nexmo"
+{ "name": "node-nexmo-api"
 , "description": "Nexmo Node Library"
 , "author" : "shripadk"
 , "maintainers":
